--- a/lm13_Quiz/templates/predict.html
+++ b/lm13_Quiz/templates/predict.html
@@ -3,7 +3,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <title>근무년수로 예상 연봉 예측1231212fsdfsfdf1</title>
+  <title>333999444근무년수로 예상 연봉 예측11</title>
   <style>
     body { font-family: sans-serif; max-width: 720px; margin: 40px auto; }
     .card { border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-top: 16px; }
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <h1>회귀분석 문제 4) 근무년수 → 예상 연봉fdsf</h1>
+  <h1>회귀분석 문제 4) 근무년수 → 예상 연봉</h1>
 
   <div class="card">
     <!-- 방법 A) AJAX 방식: submit() 눌러도 JS가 가로채서 fetch로 JSON 받아서 아래에 뿌림 -->
