--- a/lm13_Quiz/templates/predict.html
+++ b/lm13_Quiz/templates/predict.html
@@ -3,7 +3,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <title>근무년수로 예상 연봉 예측1123121</title>
+  <title>가구별 유아수에 따른 물품 판매량 조회</title>
   <style>
     body { font-family: sans-serif; max-width: 720px; margin: 40px auto; }
     .card { border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-top: 16px; }
